--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -1,27 +1,32 @@
 @using UI.Enums
 @using UI.Models
+
 <div class="bg-indigo-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-auto mb-2 p-2 rounded-lg">
-  @for (var i = 0; i < GridCells.Length; i++)
+  @if (GridCells is not null)
   {
-    var cell = GridCells[i];
-    var index = i;
-    <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
-      @if (cell == Marks.X)
-      {
-        <img src="icons/x.svg" class="w-1/2" alt="X mark"/>
-      }
-      else if (cell == Marks.O)
-      {
-        <img src="icons/o.svg" class="w-3/5" alt="O mark"/>
-      }
-    </button>
+    @for (var i = 0; i < GridCells.Length; i++)
+    {
+      var cell = GridCells[i];
+      var index = i;
+      <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
+        @if (cell == Marks.X)
+        {
+          <img src="icons/x.svg" class="w-1/2" alt="X mark"/>
+        }
+        else if (cell == Marks.O)
+        {
+          <img src="icons/o.svg" class="w-3/5" alt="O mark"/>
+        }
+      </button>
+    }
   }
+
 </div>
 
 @code {
 
   [Parameter]
-  public required Marks[] GridCells { get; set; }
+  public Marks[]? GridCells { get; set; }
 
   [Parameter]
   public Marks ActiveMark { get; set; }
@@ -37,8 +42,6 @@
 
   private void PlaceMark(Marks cell, int index)
   {
-    GridCells[index] = ActiveMark;
-
     var model = new Move
     {
       Mark = ActiveMark,
