--- a/UI/Pages/_Host.cshtml
+++ b/UI/Pages/_Host.cshtml
@@ -11,11 +11,12 @@
   <base href="~/"/>
   <link href="css/site.css" rel="stylesheet"/>
   <link rel="icon" type="image/png" href="favicon.png"/>
-  <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
+  <component type="typeof(HeadOutlet)" render-mode="Server"/>
+  <title>TicTacGo</title>
 </head>
 
 <body>
-<component type="typeof(App)" render-mode="ServerPrerendered"/>
+<component type="typeof(App)" render-mode="Server"/>
 
 <div id="blazor-error-ui">
   <environment include="Staging,Production">
