--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -1,48 +1,54 @@
-@using TicTacGo.Enums
-@using TicTacGo.Models
+@using UI.Enums
+@using UI.Models
 
 <div class="bg-indigo-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-auto mb-2 p-2 rounded-lg">
-    @for (int i = 0; i < GridCells.Length; i++)
+  @if (GridCells is not null)
+  {
+    @for (var i = 0; i < GridCells.Length; i++)
     {
-        Marks cell = GridCells[i];
-        int index = i;
-        <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
-            @if (cell == Marks.X) {
-                <img src="icons/x.svg" class="w-1/2"/>
-            } else if (cell == Marks.O) {
-                <img src="icons/o.svg" class="w-3/5"/>
-            }
-        </button>
+      var cell = GridCells[i];
+      var index = i;
+      <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
+        @if (cell == Marks.X)
+        {
+          <img src="icons/x.svg" class="w-1/2" alt="X mark"/>
+        }
+        else if (cell == Marks.O)
+        {
+          <img src="icons/o.svg" class="w-3/5" alt="O mark"/>
+        }
+      </button>
     }
+  }
+
 </div>
 
 @code {
-    [Parameter]
-    public Marks[] GridCells { get; set; }
 
-    [Parameter]
-    public Marks ActiveMark {get; set;}
+  [Parameter]
+  public Marks[]? GridCells { get; set; }
 
-    [Parameter]
-    public EventCallback<Marks> UpdateParentActiveMark { get; set; }
+  [Parameter]
+  public Marks ActiveMark { get; set; }
 
-    [Parameter]
-    public EventCallback<MoveModel> OnClickFunction { get; set; }
+  [Parameter]
+  public EventCallback<Move> OnClickFunction { get; set; }
 
-    private void UpdateActiveMark (Marks mark) {
-        UpdateParentActiveMark.InvokeAsync(ActiveMark);
-    }
-        
-    public void PlaceMark(Marks cell, int index) {
-        GridCells[index] = ActiveMark;
+  [Parameter]
+  public required string ActivePlayerClientConnectionId { get; set; }
 
-        MoveModel model = new MoveModel
-        {
-          SetMark = ActiveMark,
-          CellIndex = index
-        };
+  [Parameter]
+  public bool HasTurn { get; set; }
 
-        OnClickFunction.InvokeAsync(model);
-        UpdateActiveMark(ActiveMark);
-    }
+  private void PlaceMark(Marks cell, int index)
+  {
+    var model = new Move
+    {
+      Mark = ActiveMark,
+      Index = index
+    };
+
+    OnClickFunction.InvokeAsync(model);
+  }
+
 }
