--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -25,7 +25,7 @@
     GridCells="@_gameBoard"
     ActiveMark="@_activeMark"
     OnClickFunction="@MakeMove"
-    ActivePlayerClientConnectionId="@_activePlayerClientConnectionId"/>
+    CanMakeMove="@CanMakeMove()"/>
 </div>
 
 @code {
