--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -2,8 +2,8 @@
 
 @inject NavigationManager Navigation
 @using Microsoft.AspNetCore.SignalR.Client
-@using UI.Models
 @using UI.Enums
+@using UI.Models
 @implements IAsyncDisposable
 
 <PageTitle>TicTacGo Game</PageTitle>
@@ -12,12 +12,12 @@
   <div class="flex justify-center gap-9 pb-6">
     @if (_host is not null)
     {
-      <PlayerCard Player="@_host" ActiveMark="@_activeMark"/>
+      <PlayerCard Player="@_host" ActiveMark="@_activeMark" ClientConnectionId="@_clientConnectionId"/>
     }
 
     @if (_guest is not null)
     {
-      <PlayerCard Player="@_guest" ActiveMark="@_activeMark"/>
+      <PlayerCard Player="@_guest" ActiveMark="@_activeMark" ClientConnectionId="@_clientConnectionId"/>
     }
   </div>
 
@@ -38,7 +38,7 @@
   private Player? _host;
   private Player? _guest;
   private Marks _activeMark;
-  private readonly string _activePlayerClientConnectionId = string.Empty;
+  private string _clientConnectionId = string.Empty;
 
   protected override async Task OnInitializedAsync()
   {
@@ -69,6 +69,8 @@
     });
 
     await _hubConnection.StartAsync();
+
+    if (_hubConnection.ConnectionId != null) _clientConnectionId = _hubConnection.ConnectionId;
   }
 
   public bool IsConnected =>
