--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -1,6 +1,5 @@
 @using UI.Enums
 @using UI.Models
-
 <div class="bg-indigo-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-auto mb-2 p-2 rounded-lg">
   @if (GridCells is not null)
   {
@@ -8,7 +7,7 @@
     {
       var cell = GridCells[i];
       var index = i;
-      <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
+      <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg @(CanMakeMove ? "cursor-pointer" : "cursor-not-allowed") flex active:bg-indigo-800 items-center justify-center">
         @if (cell == Marks.X)
         {
           <img src="icons/x.svg" class="w-1/2" alt="X mark"/>
@@ -20,7 +19,6 @@
       </button>
     }
   }
-
 </div>
 
 @code {
@@ -35,10 +33,7 @@
   public EventCallback<Move> OnClickFunction { get; set; }
 
   [Parameter]
-  public required string ActivePlayerClientConnectionId { get; set; }
-
-  [Parameter]
-  public bool HasTurn { get; set; }
+  public bool CanMakeMove { get; set; }
 
   private void PlaceMark(Marks cell, int index)
   {
