fix padding issue

--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -8,7 +8,7 @@
 
 <PageTitle>TicTacGo Game</PageTitle>
 
-<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen pb-8 pt-40">
+<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen pb-8">
   @if (_host is not null && _host.HasWon)
   {
     <WinnerScreen Winner="@_host"/>
