--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -1,6 +1,6 @@
 @using UI.Models
 @using UI.Enums
-<div class="grid justify-items-center mb-5">
+<div class="grid justify-items-center mb-5 pt-40">
   <div class="bg-indigo-950 w-28 h-48 grid content-between justify-items-center justify-center rounded-xl p-1 mb-3 @GetActiveStateCssClasses()">
     <div class="rounded-full min-w-ful h-20 w-20 max-w-max mx-2">
       <img src="@Player.ImageUrl" alt="@Player.Name's photo"/>
