fix styling on winner screen

--- a/UI/Shared/WinnerScreen.razor
+++ b/UI/Shared/WinnerScreen.razor
@@ -1,6 +1,7 @@
 @using UI.Models
-<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-full">
-  <div class="w-64 mx-auto flex justify-between h-28 relative bottom-16">
+
+<div class="bg-gradient-to-r from-violet-900 to-purple-900 pt-20">
+  <div class="w-64 mx-auto flex justify-between h-28">
     <img src="icons/star.svg" alt="win star" class="self-end"/>
     <img src="icons/star.svg" alt="win star"/>
     <img src="icons/star.svg" alt="win star" class="self-end"/>
