--- a/UI/Shared/Logo.razor
+++ b/UI/Shared/Logo.razor
@@ -1,18 +1,3 @@
-<div class="flex flex-col items-center w-fit mx-auto">
-  <div class="text-6xl font-semibold w-44 flex justify-between">
-    <span class="text-yellow-300">T</span>
-    <span class="text-red-600">I</span>
-    <span class="text-yellow-300">C</span>
-  </div>
-
-  <div class="text-6xl font-semibold">
-    <span class="text-red-600">T</span>
-    <span class="text-yellow-300">A</span>
-    <span class="text-red-600">C</span>
-  </div>
-
-  <div class="text-6xl font-semibold">
-    <span class="text-yellow-300">G</span>
-    <span class="text-red-600">O</span>
-  </div>
-</div>
+<h1 class="font-['Pacifico'] text-5xl focus:outline-none text-center mb-12">
+  <span class="text-[#d877aa]">Tic</span> <span class="text-[#f59771]">Tac</span> <span class="text-[#f7acd3]">Go</span>
+</h1>
