create and style join game page

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -16,7 +16,7 @@
     <div class="flex flex-col self-stretch">
       <a @onclick="StartGame" class="font-['Quicksand'] text-xl text-center text-slate-200 p-2 w-full border border-white rounded-r-full rounded-l-full mb-4 cursor-pointer">Start Game</a>
 
-      <a class="font-['Quicksand'] text-xl text-center text-slate-200 p-2 w-full border border-white rounded-r-full rounded-l-full cursor-pointer">Join Game</a>
+      <a href="/joingame" class="font-['Quicksand'] text-xl text-center text-slate-200 p-2 w-full border border-white rounded-r-full rounded-l-full cursor-pointer">Join Game</a>
     </div>
   </div>
 </div>
