--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -10,18 +10,32 @@
 <PageTitle>TicTacGo Game</PageTitle>
 
 <div class="pt-20">
-  @if (_host is not null && _host.HasWon)
-  {
-    <WinnerScreen Winner="@_host"/>
-  }
-  else if (_guest is not null && _guest.HasWon)
-  {
-    <WinnerScreen Winner="@_guest"/>
-  }
-  else
-  {
-    if (_gameCanStart)
+    @if (_gameCanStart)
     {
+      @if (_host != null && _host.HasWon)
+      {
+        @if (_host.ConnectionId == _clientConnectionId) 
+        {
+          <WinnerScreen Winner="@_host"/>
+        }
+        else
+        {
+          <LoserScreen Loser="@_guest"/>
+        }
+      }
+      else if (_guest != null && _guest.HasWon)
+      {
+        @if (_guest.ConnectionId == _clientConnectionId)
+        {
+         <WinnerScreen Winner="@_guest"/> 
+        }
+        else 
+        {
+          <LoserScreen Loser="@_host"/>
+        }
+      }
+      else
+      {
       <div class="flex justify-center gap-9 pb-6">
         <PlayerCard Player="@_host" ClientConnectionId="@_clientConnectionId"/>
 
@@ -33,12 +47,13 @@
         ActiveMark="@_activeMark"
         OnClickFunction="@MakeMove"
         CanMakeMove="@CanMakeMove()"/>
+      }
     }
     else
     {
       <GameCode GameShareCode="@GameCode"/>
     }
-  }
+  
 </div>
 
 @code {
